--- a/part1.ipynb
+++ b/part1.ipynb
@@ -141,7 +141,7 @@
     "                100,\n",
     "                100]\n",
     "\n",
-    "\"\"\"Input downtimes\"\"\"\n",
+    "\"\"\"Input opportunity windows\"\"\"\n",
     "tow1=0\n",
     "pow1=1\n",
     "\n",
