--- a/part2.ipynb
+++ b/part2.ipynb
@@ -169,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"Input downtimes\"\"\"\n",
+    "\"\"\"Input opportunity windows\"\"\"\n",
     "downtime=([],\n",
     "          [],\n",
     "          [],\n",
