--- a/part2.ipynb
+++ b/part2.ipynb
@@ -180,19 +180,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For example, to input the following downtimes\n",
+    "For example, to input the following opportunity windows\n",
     "    machine 1: stops at t=10min and lasts for 25min, stops at t=80min and lasts for 20min\n",
-    "    machine 2: no downtime\n",
+    "    machine 2: no opportunity window\n",
     "    machine 3: stops at t=50min and lasts for 10min\n",
-    "    machine 4: no downtime\n",
+    "    machine 4: no opportunity window\n",
     "\n",
-    "Then, you can input the downtimes as followings:\n",
+    "Then, you can input the opportunity window as followings:\n",
     "<br>    downtime=([[10,25],[80,20]],\n",
     "<br>              [],\n",
     "<br>              [[50,10]],\n",
     "<br>              [])\n",
     "\n",
-    "You may follow the format of the example to input your own downtimes. Be careful with the usage of square barackts."
+    "You may follow the format of the example to input your own opportunity windows. Be careful with the usage of square barackts."
    ]
   },
   {
