Fix deprecated np.int usage

--- a/part1.ipynb
+++ b/part1.ipynb
@@ -105,8 +105,8 @@
     "        self.w = np.zeros((self.M, tpoints))      #generate downtime list according to downtime input\n",
     "        for i in range(self.M):\n",
     "            for j in downtime[i]:\n",
-    "                self.w[i, np.int(np.round(j[0]*(10**decimal))):\\\n",
-    "                       np.int(np.round((j[0]+j[1])*(10**decimal)))] = 1         #w=1 if the machine is down at the time step\n",
+    "                self.w[i, int(np.round(j[0]*(10**decimal))):\\\n",
+    "                       int(np.round((j[0]+j[1])*(10**decimal)))] = 1         #w=1 if the machine is down at the time step\n",
     "        \n",
     "        for t in range(1,tpoints):\n",
     "            pc[:,t] = pc[:, t-1] + (1 - self.w[:, t-1]) / self.ct / (10**decimal)\n",
